<resources>
    <string name="app_name">Jasa Online</string>
    <string name="home">Beranda</string>
    <string name="user_services">Jasa Pengguna</string>
    <string name="account_setting">Pengaturan Akun</string>
    <string name="profile">Profil</string>
    <string name="logout">Logout</string>
    <string name="header_name">Nama di Header</string>
    <string name="header_email">Email di Header</string>
    <string name="header_image">image header</string>
    <string name="fragment_home">Ini fragment Beranda Pengguna</string>
    <string name="fragment_service">Ini fragment Jasa Pengguna</string>
    <string name="fragment_profile">Ini fragment Profil Pengguna</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>