<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_service"
            android:icon="@drawable/ic_work_24"
            android:title="@string/user_services"/>
    </group>
    <item android:title="@string/account_setting">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_person_24"
                android:title="@string/profile"/>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_24"
                android:title="@string/logout"/>
        </menu>
    </item>
</menu>