<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@color/brown_500"
    android:gravity="bottom"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:paddingBottom="15dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/header_image" />
    <TextView
        android:id="@+id/tvHeaderName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_name"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/tvHeaderEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_email"
        android:textColor="@android:color/white"
        android:textSize="16sp"/>

</LinearLayout>